# hex-motor

./: .gitignore  Cargo.toml  README.md
examples/: control_smoke.rs  m1_heartbeat.rs  m1_sdo_identity.rs  m2_discover.rs  m3_initialize_and_read.rs  m4_run_profile_velocity.rs  m5_subscribe_to_csv.rs
examples/common/: mod.rs
src/: error.rs  lib.rs
src/canopen/: cob.rs  heartbeat.rs  mod.rs  nmt.rs  rpdo_config.rs  sdo.rs  tpdo_config.rs
src/cia402/: codec.rs  compressed_mit.rs  discovery.rs  events.rs  heartbeat.rs  initialize.rs  known_devices.rs  manager.rs  mod.rs  motor_entry.rs  sequences.rs  subscribe.rs  tpdo_listener.rs  types.rs  velocity.rs
src/types/: errors.rs  identity.rs  mod.rs  mode.rs  target.rs
